# plover_auto_reconnect_machine

./: .gitattributes  .gitignore  README.md  plover_auto_reconnect_machine.py  setup.cfg
