[metadata]
name = plover_auto_reconnect_machine
version = 0.1.0
description = This extension tries to automatically reconnect the steno machine if the connection got lost.
long_description = file: README.md
author = Tobias Schulte
author_email = tobias.schulte@gliderpilot.de
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/tschulte/plover_auto_reconnect_machine
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
    plover>=4.0.0rc2
py_modules =
    plover_auto_reconnect_machine

[options.entry_points]
plover.extension =
    plover_auto_reconnect_machine = plover_auto_reconnect_machine:AutoReconnectMachine
